Change max width to 42rem for readability, fix alignment on long post navigation

--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
@@ -99,7 +99,8 @@ $topbar__title-font-size: 1.5rem;
 $copyright-font-size: $font-scale-dot7;
 
 // content
-$content-max-width: 52rem; // @ ~122 CPL
+$content-max-width: 42rem; // @ ~100 CPL
+//$content-max-width: 52rem; // @ ~122 CPL
 //$content-max-width: 38rem; // @ ~70 CPL
 $content-margin-left: $sidebar-width + 2rem;
 $content-margin-right: 2rem;
